[gd_scene load_steps=4 format=3 uid="uid://dbb0o1k7qgl3y"]

[ext_resource type="Script" uid="uid://qg6lomvwu2jf" path="res://scenes/map/AlleyRow.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://chs5m1dcc3v58" path="res://art/goodvibe.png" id="2_4nc76"]
[ext_resource type="PackedScene" uid="uid://dqvt1s82wu8pu" path="res://scenes/map/map_room.tscn" id="3_4nc76"]

[node name="AlleyRow" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
script = ExtResource("1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 16.0
offset_right = 254.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("2_4nc76")
expand_mode = 1

[node name="RoomsContainer" type="Control" parent="."]
anchors_preset = 0
offset_left = 6.0
offset_top = 72.0
offset_right = 212.0
offset_bottom = 126.0

[node name="OptionA" parent="RoomsContainer" instance=ExtResource("3_4nc76")]
position = Vector2(5, 56)
ignore_room_position = true

[node name="OptionB" parent="RoomsContainer" instance=ExtResource("3_4nc76")]
position = Vector2(106, 46)
ignore_room_position = true

[node name="OptionC" parent="RoomsContainer" instance=ExtResource("3_4nc76")]
position = Vector2(232, 55)
ignore_room_position = true
